SERVER-65802 Return NamespaceExists when dropTarget=false but unsharded target collection exists